# kexian

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN_ASCENTS_STREAM.md  README.md  app.py  climbing.db  docker-compose.yml  migrate.py  models.py  pyproject.toml
migrations/versions/: 1ffd492f1a51_add_style_to_sessions.py  7b5330597a5e_initial_schema.py  92d664f0962c_add_users_table.py  c67e109c84a7_add_planned_to_sessions.py
models/: __init__.py  location.py  project.py  session.py  user.py
routes/: __init__.py  ascents.py  auth.py  locations.py  pages.py  projects.py  sessions.py
static/css/: ascents.css  base.css  components.css  locations.css  nav.css  profile.css  projects.css  stream.css  style.css
static/js/: api.js  app.js  ascents.js  auth.js  locations.js  projects.js  router.js  sessions.js  stream.js
templates/: index.html
templates/partials/: _auth_modals.html  _location_modal.html  _session_modal.html  _tab_ascents.html  _tab_locations.html  _tab_profile.html  _tab_projects.html  _tab_stream.html
