[project]
name = "climbing-tracker"
version = "0.1.0"
description = "Track climbing projects, log attempts, celebrate sends."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "pycountry>=24.6",
]

[project.scripts]
climbing-tracker = "app:app"
