[project]
name = "kexian"
version = "0.1.0"
description = "Track climbing projects, log attempts, celebrate sends."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "pycountry>=24.6",
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
]

[project.scripts]
kexian = "app:app"
